Added reset button for form

--- a/src/index.html
+++ b/src/index.html
@@ -59,6 +59,7 @@
                     <small id="conceptHelp" class="form-text text-muted">Secondary goals after achieving the first one</small>
                 </div>
                 <button type="submit" id="submitExercise" class="btn btn-primary">Submit</button>
+                <input type="reset" value="Reset" name="reset" class="btn btn-primary">
             </form>
         </div>
     </div>
